--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
+language: ruby
+bundler_args: --without development
 rvm:
   - 1.8.7
   - 1.9.2
   - ree
-  - jruby
+  - jruby-18mode
+  - jruby-19mode
